syntax = "proto3";
package v1;

option go_package = "github.com/vinceanalytics/vince/proro/v1";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// StorePrefix defines different kind of data we are storing in the key value
// store.
enum StorePrefix {
  SITES = 0;
  BLOCKS = 1;
  ALERTS = 2;
  ACCOUNT = 3;
  TOKEN = 4;
  RAFT_LOGS = 5;
  RAFT_STABLE = 6;
  RAFT_SNAPSHOT = 7;
}

message StoreKey {
  string namespace = 1;
  StorePrefix prefix = 2;
}

message Site {
  string domain = 1;

  message Key {
    StoreKey store = 1;
    string domain = 2;
  }

  message GetOptions {}
  message CreateOptions { string domain = 1; }
  message ListOptions {}
  message DeleteOptions { string domain = 1; }

  message List { repeated Site list = 1; }
}

message Block {
  message Key {
    StoreKey store = 1;
    Kind kind = 2;
    string domain = 3;
    string uid = 4;

    enum Kind {
      METADATA = 0;
      INDEX = 1;
    }
  }

  message Index {

    // A list of bitmaps each belonging to a row group. This allows us to select
    // row groups that might contain relevant data based on indexed columns.
    repeated bytes row_group_bitmap = 1;

    // A list of min/max timestamp observed per row group
    repeated Range time_range = 2;

    message Range {
      // The minimum timestamp value observed in a row group.
      google.protobuf.Timestamp min = 1;

      // The maximum timestamp value observed a row group.
      google.protobuf.Timestamp max = 2;
    }
  }
}

message Status {}

message Build { string version = 1; }

// Configuration object for vince instance
message Config {
  // Path to the directory which is used to store metadata. This directory  is
  // managed by  badger key/value store. WHich is used to store all metadata
  // regarding sites events.
  //
  // Metadata includes
  //  - Registered sites
  //  - Blocks metadata
  //  - Blocks indexes
  string meta_path = 1;

  // Path to where block files are stored. Blocks are stored as files with ULID
  // as filenames
  string blocks_path = 2;

  // host:port to bind for http api. This is used by serve command. The server
  // serves ui console
  string listen_address = 3;

  // Control how much is logged options are
  // trace,debug,info,warn,error,fatal,panic
  string log_level = 4;

  // Interval for syncing buffered entries. By default events are buffered and
  // periodically saved.
  google.protobuf.Duration sync_interval = 5;

  // Expose /debug/pprof endpoint when serving
  bool enable_profile = 6;

  // host:port to bind myslq server. Serves web analytics via MySQL compliant
  // wire protocol.
  string mysql_listen_address = 7;

  string tls_cert_file = 8;
  string tls_key_file = 9;

  int64 events_buffer_size = 10;

  repeated Notifier notifiers = 11;

  string server_id = 12;
  string raft_listen_address = 13;
  Cluster cluster = 14;

  message Cluster {
    Version version = 1;
    google.protobuf.Duration heartbeat_timeout = 2;
    google.protobuf.Duration election_timeout = 3;
    google.protobuf.Duration commit_timeout = 4;
    int32 max_append_entries = 5;
    bool batch_acpply = 6;
    bool shutdowm_on_remove = 7;
    uint64 trailing_logs = 8;
    google.protobuf.Duration snapshot_interval = 9;
    uint64 snapshot_threshold = 10;
    google.protobuf.Duration leader_lease_timeout = 11;
    string local_id = 12;

    enum Version {
      Min = 0;
      Max = 3;
    }
  }

  message Notifier {
    string name = 1;
    oneof provider {
      Email email = 2;
      Webhook webhook = 3;
    }
  }

  message Email {
    string to = 1;
    string from = 2;
    string hello = 3;
    string host_port = 4;
    string auth_username = 5;
    string auth_password = 6;
    string auth_secret = 7;
    string auth_identity = 8;
    map<string, string> headers = 9;
    string html = 10;
    string text = 11;
    bool require_tls = 12;
    HTTP.TLSConfig tls_config = 13;
  }

  message Webhook {
    HTTP http_config = 1;
    string url = 2;
  }

  message HTTP {
    BasicAuth basic_auth = 1;
    Authorization authorization = 2;
    OAuth2 pauth2 = 3;
    TLSConfig tls_config = 4;

    message BasicAuth {
      string username = 1;
      string password = 2;
    }
    message Authorization {
      string type = 1;
      string credentials = 2;
    }
    message OAuth2 {
      string client_id = 1;
      string client_secret = 2;
      repeated string client_scopes = 3;
      string token_url = 4;
      map<string, string> endpoint_params = 5;
      TLSConfig tls_config = 6;
    }

    message TLSConfig {
      string key_file = 1;
      string cert_file = 2;
      bool insecure_skip_verify = 3;
    }
  }
}

message Account {
  string name = 1;
  bytes hashed_password = 2;

  message Key {
    StoreKey store = 1;
    string name = 2;
  }
}

message Client {
  bytes private_key = 1;

  // Authentication details of vince instances
  map<string, Instance> instance = 2;

  // The default auth name to use.
  Active active = 4;

  message Instance { map<string, Auth> accounts = 1; }

  message Active {
    string instance = 1;
    string account = 2;
  }
  message Auth {
    string name = 1;
    string token = 2;
    string api = 3;
    string mysql = 4;
    bool tls = 5;
  }
}

message Token {
  bytes pub_key = 1;

  message CreateOptions {
    string name = 1;
    string password = 2;
    string token = 3;
    bytes public_key = 4;
    // When true, the token will be generated by the server.
    bool generate = 5;
    google.protobuf.Duration ttl = 6;
  }

  message Key {
    StoreKey store = 1;
    int64 hash = 2;
  }

  enum Issuer {
    SERVER = 0;
    CLIENT = 1;
  }
}

message Error {
  string error = 1;
  int32 code = 2;
}

message Query {
  message Value {
    oneof value {
      int64 number = 1;
      double double = 2;
      string string = 3;
      bool bool = 4;
      google.protobuf.Timestamp timestamp = 5;
    }
  }

  message RequestOptions {
    string query = 1;
    repeated Param params = 2;
  }

  message Param {
    string name = 1;
    Value value = 2;
  }

  message Colum {
    string name = 1;
    DataType data_type = 2;

    enum DataType {
      UNKNOWN = 0;
      NUMBER = 1;
      DOUBLE = 2;
      STRING = 3;
      BOOL = 4;
      TIMESTAMP = 5;
    }
  }

  message Row { repeated Value values = 1; }

  message Result {
    google.protobuf.Duration elapsed = 1;
    repeated Colum columns = 2;
    repeated Row rows = 3;
  }
}

// Parquet fields used to store events. There are only two phisical data types
// int64 and string.
//
// The columns are grouped by data types for easy access
enum Column {
  bounce = 0;
  duration = 1;
  id = 2;
  session = 3;
  timestamp = 4;

  browser = 5;
  browser_version = 6;
  city = 7;
  country = 8;
  entry_page = 9;
  event = 10;
  exit_page = 11;
  host = 12;
  os = 13;
  os_version = 14;
  path = 15;
  referrer = 16;
  referrer_source = 17;
  region = 18;
  screen = 19;
  utm_campaign = 20;
  utm_content = 21;
  utm_medium = 22;
  utm_source = 23;
  utm_term = 24;
}

message Notice {}

message Raft {
  message Log {
    uint64 index = 1;
    uint64 term = 2;
    Type type = 3;
    bytes data = 4;
    bytes extensions = 5;
    google.protobuf.Timestamp appended_at = 6;

    enum Type {
      Command = 0;
      Noop = 1;
      AddPeerDeprecated = 2;
      RemovePeerDeprecated = 3;
      Barrier = 4;
      Configuration = 5;
    }
    message Key {
      StoreKey store = 1;
      int64 index = 2;
    }
  }
  message Stable {
    message Key {
      StoreKey store = 1;
      bytes key = 2;
    }
  }

  message Snapshot {
    Version version = 1;
    string id = 2;
    uint64 index = 3;
    uint64 term = 4;
    bytes peers = 5;
    Config config = 6;
    uint64 config_index = 7;
    int64 size = 8;

    enum Version {
      Min = 0;
      Max = 1;
    }

    message Key {
      StoreKey store = 1;
      Mode mode = 2;
      string id = 3;

      enum Mode {
        META = 0;
        DATA = 1;
      }
    }
  }
  message Config {
    repeated Server servers = 1;

    message Server {
      Suffrage suffrage = 1;
      string id = 2;
      string address = 3;

      enum Suffrage {
        Voter = 0;
        Nonvoter = 1;
        Staging = 2;
      }
    }
  }

  message RPC {

    message Command {
      oneof kind {
        AppendEntries append_entries = 1;
        Vote vote = 2;
        InstallSnapshot install_snapshot = 3;
        TimeoutNow timeout_now = 4;
      }

      message AppendEntries {
        oneof kind {
          Request request = 1;
          Response response = 2;
        }
        message Request {
          Header header = 1;
          uint64 term = 2;
          uint64 prev_log_entry = 4;
          uint64 prev_log_term = 5;
          repeated Log entries = 6;
          uint64 leader_commit_index = 7;
        }
        message Response {
          Header header = 1;
          uint64 term = 2;
          uint64 last_log = 3;
          bool success = 4;
          bool no_retry_backoff = 5;
        }
      }

      message Vote {
        oneof kind {
          Request request = 1;
          Response response = 2;
        }
        message Request {
          Header header = 1;
          uint64 term = 2;
          uint64 last_log_index = 3;
          uint64 last_log_term = 4;
          bool leadership_transfer = 5;
        }
        message Response {
          Header header = 1;
          uint64 term = 2;
          bool granted = 3;
        }
      }

      message InstallSnapshot {
        oneof kind {
          Request request = 1;
          Response response = 2;
        }
        message Request {
          Header header = 1;
          Snapshot.Version snapshot_version = 2;
          uint64 term = 3;
          bytes leader = 4;
          uint64 last_log_index = 5;
          uint64 last_log_term = 6;
          bytes configuration = 7;
          uint64 configuration_index = 8;
          int64 size = 9;
        }
        message Response {
          Header header = 1;
          uint64 term = 2;
          bool success = 3;
        }
      }

      message TimeoutNow {
        oneof kind {
          Request request = 1;
          Response response = 2;
        }
        message Request { Header header = 1; }
        message Response { Header header = 1; }
      }

      message Header {
        Version version = 1;
        bytes id = 2;
        bytes addr = 3;

        enum Version {
          Min = 0;
          Max = 1;
        }
      }
    }
  }
}