syntax = "proto3";
package v1;

message Metadata {
  repeated Column columns = 1;
  uint64 min = 2;
  uint64 max = 3;
  string id = 4;

  message Column {
    string name = 1;
    uint32 num_rows = 2;
    uint32 fst_offset = 4;
    uint64 offset = 5;
    uint32 size = 6;
    uint32 raw_size = 7;
  }

  message Chunk {
    uint64 offset = 1;
    uint64 size = 2;
  }
}

message PrimaryIndex {

  map<string, Resource> resources = 1;

  message Resource {
    string name = 1;
    map<string, Granule> granules = 2;
  }
}

message Granule {
  string id = 1;
  int64 min = 2;
  int64 max = 3;
  uint64 size = 4;
  uint64 rows = 5;
  string tenant = 6;
}
